// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> fontSize properly renders a paragraph with custom font preset size 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  font-size: 1.25rem;
  line-height: 1.5;
  font-size: 1.25rem;
}

<p
  className="emotion-0"
  fontSize="size6"
>
  This is a paragraph
</p>
`;

exports[`<Paragraph /> fontSize properly renders a paragraph with custom pixel font size 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  font-size: 100;
  line-height: 1.5;
  font-size: 100;
}

<p
  className="emotion-0"
  fontSize="100"
>
  Size Button
</p>
`;

exports[`<Paragraph /> props variant renders a longForm variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.5;
  font-size: 1rem;
}

<p
  className="emotion-0"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a tiny variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<p
  className="emotion-0"
>
  Hello World
</p>
`;

exports[`<Paragraph /> props variant renders a ui variant 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  line-height: 1.5;
  font-size: 0.875rem;
}

<p
  className="emotion-0"
>
  Hello World
</p>
`;
